# Leader-Follower-visual-exploration

./: README.md  lastRunProcIds2  latest
devel/: .catkin
devel/lib/client_test/: client_test
devel/lib/flight_pkg/: RoombaFollow  RoombaFollowScan  days_before_logs  pidWaypoint  setDestination  setHeading  setHome  simple_takeoff_land  staple  staple_rectangle  staple_rectangle_indoor  velTest
devel/lib/gps_measurements/: gps_measurements
devel/lib/logging_measurements/: rhombi_experiment  vrpn_log  vrpn_log_all
devel/lib/pkgconfig/: client_test.pc  flight_pkg.pc  gps_measurements.pc  logging_measurements.pc  rhombi_markers.pc  vrpn_measurements.pc  vrpn_relay.pc
devel/lib/rhombi_markers/: rhombi_markers
devel/lib/vrpn_measurements/: vrpn_log  vrpn_log_all
devel/lib/vrpn_relay/: vrpn_relay
logs/: 20m10d6h15min44.csv
logs/NYUNY_experiments/: latest
logs/NYUNY_experiments/2021-03-31/: gapter1_21m3d31h17min52.csv  gapter1_21m3d31h18min27.csv  gapter1_21m3d31h18min29.csv  gapter1_21m3d31h18min44.csv  gapter1_21m3d31h18min48.csv
logs/NYUNY_experiments/2021-04-01/: gapter1_21m4d1h11min35.csv  gapter1_21m4d1h12min14.csv  gapter1_21m4d1h12min16.csv  gapter1_21m4d1h12min35.csv  gapter1_21m4d1h13min1.csv  gapter1_21m4d1h13min14.csv  gapter1_21m4d1h13min3.csv  gapter1_21m4d1h13min6.csv  gapter1_21m4d1h13min8.csv  gapter1_21m4d1h15min57.csv  gapter1_21m4d1h16min7.csv  gapter1_21m4d1h17min17.csv
logs/NYUNY_experiments/2021-04-05/: gapter1_21m4d5h12min29_30.csv  gapter1_21m4d5h13min10_25.csv  gapter1_21m4d5h13min43.csv  gapter1_21m4d5h15min10_20.csv  gapter1_21m4d5h15min32_15.csv  gapter1_21m4d5h17min27_5.csv  gapter1_21m4d5h17min7.csv  gapter1_21m4d5h19min37__5.csv  gapter1_21m4d5h19min54__10.csv
logs/NYUNY_experiments/2021-04-17/: gapter1_21m4d17h16min10.csv
logs/NYUNY_experiments/2021-05-04/: gapter1_21m5d4h17min16.csv  gapter1_21m5d4h18min28.csv  gapter1_21m5d4h18min38.csv  gapter1_21m5d4h18min40.csv  gapter1_21m5d4h18min41.csv  gapter1_21m5d4h18min52.csv
logs/NYUNY_experiments/2021-05-05/: gapter1_21m5d5h13min1.csv  gapter1_21m5d5h14min27.csv  gapter1_21m5d5h14min34.csv  gapter1_21m5d5h17min10.csv  gapter1_21m5d5h19min5.csv  gapter1_21m5d5h20min10.csv  gapter1_21m5d5h20min12.csv
logs/NYUNY_experiments/2021-05-06/: .~lock.gapter1_21m5d6h16min6.csv#  gapter1_21m5d6h11min44.csv  gapter1_21m5d6h11min46.csv  gapter1_21m5d6h11min56.csv  gapter1_21m5d6h15min11.csv  gapter1_21m5d6h16min6.csv
logs/Rhombi_Experiments/: Gapter_2log_20m11d4h16min49.csv  Gapter_2log_20m11d4h17min27.csv  Gapter_2log_20m11d4h17min52.csv  Gapter_2log_20m11d4h17min9.csv  Gapter_2log_20m11d5h13min17.csv  Gapter_2log_20m11d5h13min9.csv  dummy.txt  latest  log_20m10d28h10min42.csv.csv  log_20m11d2h12min39.csv.csv  log_20m11d2h13min28.csv.csv  log_20m11d2h16min1.csv
scripts/: set_origin.py  startDaitao_experiment  startNYUNY_cameraCorrection  startNYUNY_experiment  startUtku_experiment  start_heading_check  start_rhombi_hovering  startleaderfollower  startleaderfollowerdelay  startleaderfollowerhover  startup_drone_cube_outdoor  startup_drone_hovering_outdoor  startup_mavros  startup_mavros_all  startup_mavros_indoor  startup_mavros_outdoor  syncViconTime
scripts/GapterIndoor/: indoor.param  mavinit.bak
src/: src.kdev4
src/.kdev4/: src.kdev4
src/client_test/: CMakeLists.txt
src/client_test/src/: bak2_client.cpp  bak3client.cpp  bak_client.cpp  client.cpp
src/flight_pkg/: CMakeLists.txt  bak_CMakeLists.txt  flight_pkg.kdev4  package.xml
src/flight_pkg/src/: setHome.cpp  (+28 more)
src/gps_measurements/: CMakeLists.txt
src/logging_measurements/: CMakeLists.txt  logging_measurements.kdev4  package.xml
src/logging_measurements/.kdev4/: logging_measurements.kdev4
src/logging_measurements/include/: NE_utilities.h
src/logging_measurements/launch/: NYUNY_Correction_logger.launch  NYUNY_logger.launch  NYUNY_logger_Daitao.launch  Utku_logger_potential_landing.launch  leader_follower_logger.launch  rhombi_logger.launch
src/logging_measurements/src/: Leader_Follower.cpp  NE_utilities.cpp  NYUNY_CameraCorrection.cpp  NYUNY_logger.cpp  NYUNY_logger_Daitao.cpp  Utku_logger_potential_landing.cpp  rhombi_experiment.cpp  rhombi_experiment_old.cpp  rhombi_logger.cpp  vrpn_log.cpp  vrpn_log_all.cpp
src/rhombi_markers/: CMakeLists.txt  package.xml  rhombi_markers.kdev4
src/rhombi_markers/.kdev4/: rhombi_markers.kdev4
src/rhombi_markers/cfg/: MarkerMap.yml  MarkerMapBig2_Meters.yml  MarkerMapBig800_meters.yml  MarkerMapBig_CorrectedMeters.yml  MarkerMapMeters.yml  MarkerMapMeters2.yml  Rhombicuboctahedron_Big.csv  Rhombicuboctahedron_V2.csv  gapter1_Matlab.yml  gapter1_Matlab_v2.yml  gapter1_aruco.yml  markerMap2command.txt
src/rhombi_markers/include/: NYUNY_experiment.h  geom_extractor.h  rhombi_detect.h
src/rhombi_markers/launch/: NYUNY_experiment.launch  rhombi_detector.launch  rhombi_geom.launch  rhombi_geom_new.launch
src/rhombi_markers/src/: NYUNY_experiment.cpp  aruco_findRcube_v1.cpp  aruco_findRcube_v2.cpp  aruco_findRcube_v3.cpp  aruco_simple.cpp  rhombi_detect.cpp  rhombi_geom_extractor.cpp  rhombi_markers.cpp  rhombi_markers_bak.cpp  rhombi_markers_v2.cpp
src/spinnaker_sdk_camera_driver/: CMakeLists.txt  package.xml
src/spinnaker_sdk_camera_driver/include/spinnaker_sdk_camera_driver/: NE_acquisition_node.h  NYUNY_v1.h
src/spinnaker_sdk_camera_driver/launch/: NE_acquisition_node.launch  NE_acquisition_node_B&W.launch  NE_acquisition_node_BW.launch  NE_acquisition_node_annotations.launch  NYUNY_v1.launch  acquisition.launch  acquisition_color.launch
src/spinnaker_sdk_camera_driver/params/: gapter1.yaml  gapter1_matlab.yaml
src/spinnaker_sdk_camera_driver/src/: NE_acquisition_node.cpp  NE_acquisition_node_annotations.cpp  NE_utilities.cpp  NYUNY_v1.cpp  camera.cpp  capture.cpp
src/vrpn_measurements/: CMakeLists.txt.bak  package.xml.bak
src/vrpn_relay/: CMakeLists.txt  vrpn_relay.kdev4
src/vrpn_relay/.kdev4/: vrpn_relay.kdev4
src/vrpn_relay/launch/: vrpn_relay.launch  vrpn_relay_v3.launch
src/vrpn_relay/src/: vrpn_relay.cpp  vrpn_relay_v2.cpp  vrpn_relay_v3.cpp
(+66 files in other folders)
